@@ -31,7 +31,7 @@ if [ ! -d "$bin" ] || [ ! -d "$work" ]; then
   exit 1
 fi
 
-if [ -f "$curve"/abi ] || [ -f "$curve"/compiler ] || [ -f "$curve"/cflags ]; then
+if [ -z "$1"] && ([ -f "$curve"/abi ] || [ -f "$curve"/compiler ] || [ -f "$curve"/cflags ]); then
   echo "You have already picked an ABI, compiler, or -options for CurveDNS:"
   [ -f "$curve"/abi ] && ( echo -n "ABI:			"; cat "$curve"/abi )
   [ -f "$curve"/compiler ] && ( echo -n "Compiler:		"; cat "$curve"/compiler )
@@ -68,13 +68,16 @@ lastabi=`cat "$curve"/lastabi`
 
 rm -f "$curve"/*
 
-if [ "$abis" -gt 1 ]; then
+if [ "$abis" -gt 1 ] && [ -z "$1" ]; then
   echo "There are more than one application binary interfaces generated for your "
   echo "system, which one do you want to use for CurveDNS?"
   select abi in $(okabi); do
     if [ -n "$abi" ]; then break; fi
   done
   echo $abi > "$curve"/abi
+else if [ "$abis" -gt 1 ] && [ ! -z "$1" ]; then
+  # XXX: check if ABI indeed exists
+  echo "$1" > "$curve"/abi
 else
   echo "$lastabi" > "$curve"/abi
 fi
