@@ -35,6 +35,7 @@
  */
 
 #include "misc.h"
+#include "ip.h"
 
 // An open descriptor to /dev/urandom
 int global_urandom_fd = -1;
@@ -49,6 +50,19 @@ static char *misc_getenv(const char *env, int mandatory) {
 		return NULL;
 	}
 	return ptr;
+}
+
+// result = -1 - IP found in env, but not correct
+//           0 - no IP found in env
+//           1 - IP found in env and correct
+int misc_getenv_ip(const char *env, int mandatory, anysin_t *result) {
+	char *ptr = misc_getenv(env, mandatory);
+	if (ptr) {
+		if (!ip_parse(result, ptr, 53))
+			return -1;
+		return 1;
+	}
+	return 0;
 }
 
 int misc_getenv_int(const char *env, int mandatory, int *result) {
